--- a/index.htm
+++ b/index.htm
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Ícones -->
-    <link rel="stylesheet" href="Curr%C3%ADculo_arquivos/boxicons.css">
+    <link rel="stylesheet" href="boxicons.css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="Curr%C3%ADculo_arquivos/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title>Jonathan Abrantes</title>
 </head>
@@ -82,7 +82,7 @@
                 <section class="home" id="home">
                     <div class="home__container section bd-grid">
                         <div class="home__data bd-grid">
-                            <img src="Curr%C3%ADculo_arquivos/jonathan.jpg" alt="Imagem de perfil" class="home__img">
+                            <img src="jonathan.jpg" alt="Imagem de perfil" class="home__img">
 
                             <h1 class="home__title">
                                 <b>JONATHAN</b> ABRANTES
@@ -375,10 +375,10 @@
     </a>
 
     <!-- HTML/PDF -->
-    <script src="Curr%C3%ADculo_arquivos/html2pdf.js"></script>
+    <script src="html2pdf.js"></script>
 
     <!-- Main JS -->
-    <script src="Curr%C3%ADculo_arquivos/main.js"></script>
+    <script src="main.js"></script>
 
 
 </body></html>
