--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     
                                 <div class="experience__data bd-grid">
                                     <h3 class="experience__title">Assistente de Infraestrutura de Redes</h3>
-                                    <span class="experience__company">2016 | 2021 - Sicoob Soluções de Pagamentos</span>
+                                    <span class="experience__company">2016 | 2021 - <b>Sicoob Soluções de Pagamentos</b></span>
                                     <p class="experience__description">•	Realização de troubleshooting em ambientes de missão crítica.</p>
 									<p class="experience__description">•	Automatização de tarefas e processos batch desenvolvendo scripts em: Powershell e Bash.</p>
 									<p class="experience__description">•	Administração de sistemas operacionais linux (Red Hat Enterprise Linux 7, Oracle Linux 7), AIX (6.1 e 7.1), Windows, Windows Server e MacOs.</p>
