--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="l-header" id="header">
         <nav class="nav bd-container">
-            <a href="#" class="nav__logo">Abrantes</a>
+            <a href="#" class="nav__logo">Menu</a>
 
             <div class="div nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -103,6 +103,7 @@
                         </div>
                     </div>
                     <!-- Botão de tema light/dark -->
+					
                     <i class="bx bx-moon change-theme" title="Tema claro/escuro" id="theme-button"></i>
 
                     <!-- Botão para gerar o pdf -->
@@ -386,7 +387,7 @@
     </a>
 
     <!-- HTML/PDF -->
-    <script src="html2pdf.js"></script>
+    <script src="html2pdf.bundle.min.js"></script>
 
     <!-- Main JS -->
     <script src="main.js"></script>
