Adicionando Curso de Kubernetes

--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
                             <h3 class="certificate__title">DevOps Ninja: Docker, Kubernetes e Rancher</h3>
                             <p class="certificate__description">Udemy | Emitido em Novembro de 2021</p>
                         </div>
+
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Kubernetes: Pods, Services e ConfigMaps</h3>
+                            <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
+                        </div>
                         
                         <div class="certificate__content">
                             <h3 class="certificate__title">Docker: criando e gerenciando containers</h3>
