Adicionando cursos linux 5 e 6

--- a/index.html
+++ b/index.html
@@ -344,6 +344,16 @@
                         </div>
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Certificação Linux LPI Essentials parte 5: Directories and Listing Files and managing files</h3>
+                            <p class="certificate__description">Alura | Emitido em Março de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Certificação Linux LPI Essentials parte 6: Archiving Files on the Command Line</h3>
+                            <p class="certificate__description">Alura | Emitido em Março de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Linux I: conhecendo e utilizando o terminal </h3>
                             <p class="certificate__description">Alura | Emitido em Março de 2022</p>
                         </div>
