Adicionando Curso de Jenkins

--- a/index.html
+++ b/index.html
@@ -314,6 +314,11 @@
                         </div>
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Jenkins e Docker: Pipeline de entrega continua </h3>
+                            <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Fundamentos de DevOps </h3>
                             <p class="certificate__description">LinkeDin Learning | Emitido em Outubro de 2021</p>
                         </div>
