Adicionando curso de entrega contínua

--- a/index.html
+++ b/index.html
@@ -319,6 +319,11 @@
                         </div>
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Entrega Contínua: confiabilidade e qualidade na implantação de software </h3>
+                            <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Fundamentos de DevOps </h3>
                             <p class="certificate__description">LinkeDin Learning | Emitido em Outubro de 2021</p>
                         </div>
