Adicionando curso de AWS

--- a/index.html
+++ b/index.html
@@ -334,6 +334,11 @@
                         </div>
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Deploy no Amazon EC2: alta disponibilidade e escalabilidade de uma aplicação</h3>
+                            <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Certificação Linux LPI Essentials parte 1: Evolution and Distributions</h3>
                             <p class="certificate__description">Alura | Emitido em Março de 2022</p>
                         </div>
