Adicionando curso Azure AKS e ACR

--- a/index.html
+++ b/index.html
@@ -344,6 +344,11 @@
                         </div>
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Azure: gerencie Kubernetes com AKS e ACR</h3>
+                            <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Certificação Linux LPI Essentials parte 1: Evolution and Distributions</h3>
                             <p class="certificate__description">Alura | Emitido em Março de 2022</p>
                         </div>
