Add Docker Swarm: Orquestrador de containers

--- a/index.html
+++ b/index.html
@@ -299,6 +299,11 @@
                         </div>
                         
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Docker Swarm: Orquestrador de containers</h3>
+                            <p class="certificate__description">Alura | Emitido em Junho de 2022</p>
+                        </div>
+                        
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Terraform: automatize a infraestrutura na nuvem</h3>
                             <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
                         </div>
