Adding Ultimate AWS Certified Cloud Practitioner

--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
                     <div class="certificate__container bd-grid">
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Ultimate AWS Certified Cloud Practitioner - 2022</h3>
+                            <p class="certificate__description">Udemy | Emitido em Junho de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">DevOps Ninja: Docker, Kubernetes e Rancher</h3>
                             <p class="certificate__description">Udemy | Emitido em Novembro de 2021</p>
                         </div>
