--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                             <h1 class="home__title">
                                 <b>JONATHAN</b> ABRANTES
-                                </h1><h3 class="home__profession"><b>DevOps</b> Junior</h3>
+                                </h1><h3 class="home__profession"><b>DevOps</b> Analyst</h3>
                             
                         </div>
 
