Add new job and change activities

--- a/index.html
+++ b/index.html
@@ -246,7 +246,25 @@
                     <h2 class="section-title">Experiência</h2>
 
                     <div class="experience__container bd-grid">
-
+                        <div class="experience__content">
+                                <div class="experience__time">
+                                    <span class="experience__rounder"></span>
+                                    <span class="experience__line"></span>
+                                </div>
+                                <div class="experience__data bd-grid">
+                                    <h3 class="experience__title">Analista DevOps</h3>
+                                    <span class="experience__company">2022-Atual - <b>4Linux</b></span>
+                                    <p class="experience__description">•	Docker/Docker Compose/Docker Swarm;</p>
+                                    <p class="experience__description">•	Linux System Administrator;</p>
+                                    <p class="experience__description">•	Ansible;</p>
+                                    <p class="experience__description">•	Edição e criação de imagens Debian para parque da Caixa;</p>
+                                    <p class="experience__description">•	Edição de módulos do OCS para inventário de parque da Caixa.</p>
+                                </div>
+                            </div>
+                    </div>
+                </section>
+                <section class="experience section" id="experience">
+                    <div class="experience__container bd-grid">
                         <div class="experience__content">
                                 <div class="experience__time">
                                     <span class="experience__rounder"></span>
@@ -255,28 +273,33 @@
                                 <div class="experience__data bd-grid">
                                     <h3 class="experience__title">Assistente de Infraestrutura de Redes</h3>
                                     <span class="experience__company">2016 | 2021 - <b>Sicoob Soluções de Pagamentos</b></span>
-                                    <p class="experience__description">•	Realização de troubleshooting em ambientes de missão crítica.</p>
-									<p class="experience__description">•	Automatização de tarefas e processos batch desenvolvendo scripts em: Powershell e Bash.</p>
-									<p class="experience__description">•	Administração de sistemas operacionais linux (Red Hat Enterprise Linux 7, Oracle Linux 7), AIX (6.1 e 7.1), Windows, Windows Server e MacOs.</p>
-									<p class="experience__description">•	Gerenciamento de servidores de aplicação tomcat/jboss.</p>
-									<p class="experience__description">•	Automatização de processos Windows/Linux/Aix.</p>
-									<p class="experience__description">•	Movimentação de arquivos IBM File Agent/Connect e LocalCarrier.</p>
-									<p class="experience__description">•	Gerenciamento de AD(Usuários, Grupos, Permissões, GPO, WSUS, DHCP, DNS).</p>
-									<p class="experience__description">•	Gerenciamento de monitoramentos de ativos de TI através da ferramenta Nagios.</p>
-									<p class="experience__description">•	Suporte técnico em categorias de primeiro, segundo e terceiro nível.</p>
-									<p class="experience__description">•	Manutenção e montagem de redes cabeadas e wireless.</p>
-									<p class="experience__description">•	Configurações e gerenciamento de Ramais PABX.</p>
-									<p class="experience__description">•	Gerenciamento de audioconferência e videoconferência.</p>
-									<p class="experience__description">•	Gerenciamento de impressoras.</p>
-									<p class="experience__description">•	Outsourcing de suprimentos.</p>
-									<p class="experience__description">•	Gerenciamento da ferramenta de AntiSpam GFI.</p>
-									<p class="experience__description">•	Montagem de pareceres de compras de equipamentos de TI, licenças e softwares.</p>
+                                    <p class="experience__description">•	Infraestrutura como código: Ansible;</p>
+                                    <p class="experience__description">•	Administração do OVM(Oracle VM Manager), automatizando a criação de máquinas virtuais, utilizando Ansible;</p>
+                                    <p class="experience__description">•	Instalação e administração de: servidores de aplicação (Jboss e Tomcat);</p>
+                                    <p class="experience__description">•	Ferramentas de gerenciamento de código fonte (Git e Bitbucket);</p>
+                                    <p class="experience__description">•	Ferramenta de integração contínua Jenkins;</p>
+                                    <p class="experience__description">•	Ferramentas de monitoramento (Zabbix, Nagios e Grafana);</p>
+                                    <p class="experience__description">•	Instalação/Configuração e administração do Openshift;</p>
+                                    <p class="experience__description">•	Realização de troubleshooting em ambientes de missão crítica;</p>
+                                    <p class="experience__description">•	Automatização de tarefas e processos batch desenvolvendo scripts em: Powershell e Bash;</p>
+                                    <p class="experience__description">•	Administração de sistemas operacionais linux (Red Hat Enterprise Linux 7, Oracle Linux 7), AIX (6.1 e 7.1), Windows, Windows Server e MacOs;</p>
+                                    <p class="experience__description">•	Automatização de processos Windows/Linux/Aix;</p>
+                                    <p class="experience__description">•	Movimentação de arquivos IBM File Agent/Connect e LocalCarrier;</p>
+                                    <p class="experience__description">•	Gerenciamento de AD(Usuários, Grupos, Permissões, GPO, WSUS, DHCP, DNS);</p>
+                                    <p class="experience__description">•	Suporte técnico em categorias de primeiro, segundo e terceiro nível;</p>
+                                    <p class="experience__description">•	Manutenção e montagem de redes cabeadas e wireless;</p>
+                                    <p class="experience__description">•	Configurações e gerenciamento de Ramais PABX;</p>
+                                    <p class="experience__description">•	Gerenciamento de audioconferência e videoconferência;</p>
+                                    <p class="experience__description">•	Gerenciamento de impressoras;</p>
+                                    <p class="experience__description">•	Outsourcing de suprimentos;</p>
+                                    <p class="experience__description">•	Gerenciamento da ferramenta de antispam GFI;</p>
+                                    <p class="experience__description">•	Montagem de pareceres de compras de equipamentos de TI, licenças e softwares;</p>
+                                    <p class="experience__description">•	Lecionar atividades de administração de servidores Windows(AD/GPO/DNS) e atividades cotidianas de Helpdesk do Sicoob;</p>
+                                    <p class="experience__description">•	Projetos de integração da ferramenta Comunix no ambiente Cabal Brasil/Sicoob.</p>
                                 </div>
                             </div>
-
                     </div>
                 </section>
-
                 <!-- Certificados -->
                 <section class="certificate section" id="certificates">
                     <h2 class="section-title">Cursos e Certificações</h2>
