Change Instagram Link and competences on 4Linux

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             LinkedIn
                         </a>
 
-                        <a href="https://www.instagram.com/iamabrantes/" target="_blank" class="social__link">
+                        <a href="https://www.instagram.com/iamabrantess/" target="_blank" class="social__link">
                             <i class="bx bxl-instagram social__icon"></i>
                             Instagram
                         </a>
@@ -258,7 +258,8 @@
                                     <p class="experience__description">•	Linux System Administrator;</p>
                                     <p class="experience__description">•	Ansible;</p>
                                     <p class="experience__description">•	Edição e criação de imagens Debian para parque da Caixa;</p>
-                                    <p class="experience__description">•	Edição de módulos do OCS para inventário de parque da Caixa.</p>
+                                    <p class="experience__description">•	Edição de módulos do OCS para inventário de parque da Caixa;</p>
+                                    <p class="experience__description">•	Elaboração e implantação de projetos no ambiente da Caixa.</p>
                                 </div>
                             </div>
                     </div>
