--- a/index.html
+++ b/index.html
@@ -398,6 +398,11 @@
                         </div>
 
                         <div class="certificate__content">
+                            <h3 class="certificate__title">Grafana e Telegraf: Monitoramento em tempo real</h3>
+                            <p class="certificate__description">Alura | Emitido em Agosto de 2022</p>
+                        </div>
+
+                        <div class="certificate__content">
                             <h3 class="certificate__title">Certificação Linux LPI Essentials parte 1: Evolution and Distributions</h3>
                             <p class="certificate__description">Alura | Emitido em Março de 2022</p>
                         </div>
