--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <h2 class="section-title">Perfil</h2>
 
                     <p class="profile__description">
-                        Profissional com mais de 7 anos em Tecnologia da Informação com objetivo de atuar como DevOps.
+                        Profissional com mais de 7 anos em Tecnologia da Informação, atuando como analista DevOps.
                     </p>
                 </section>
 
