Adicionando Gitlab CI e Docker

--- a/index.html
+++ b/index.html
@@ -351,6 +351,11 @@
                             <h3 class="certificate__title">Git e Github: controle e compartilhe seu código</h3>
                             <p class="certificate__description">Alura | Emitido em Abril de 2022</p>
                         </div>
+                        
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Gitlab CI e Docker: Pipeline de entrega contínua</h3>
+                            <p class="certificate__description">Alura | Emitido em Agosto de 2022</p>
+                        </div>
 
                         <div class="certificate__content">
                             <h3 class="certificate__title">Jenkins e Docker: Pipeline de entrega continua </h3>
