Atualizando link de contato whatsapp

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                     <div class="social__container bd-grid">
 
-                        <a href="https://web.whatsapp.com/send?phone=5561998722026/" target="_blank" class="social__link">
+                        <a href="https://api.whatsapp.com/send?phone=5561998722026" target="_blank" class="social__link">
                             Whatsapp
                         </a>
 
