--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                             </div>
 
                             <div class="education__data bd-grid">
-                                <h3 class="education__title">Devops</h3>
-                                <span class="education__studies">Alura</span>
+                                <h3 class="education__title">Formação DevOps</h3>
+                                <span class="education__studies">4Linux, Alura e Udemy</span>
                                 <span class="education__year">2022 - 2023</span>
                             </div>
                         </div>
