add Automation Specialist with Ansible

--- a/index.html
+++ b/index.html
@@ -320,9 +320,10 @@
                                                
                         <div class="certificate__content">
                             <h3 class="certificate__title"><b>IaC-Infrastructure as Code</b></h3>
+                            <p class="certificate__description">• <b>Automation Specialist with Ansible</b><br>4Linux | Issued in August 2022 - 40 Hours</p>
+                            <p class="certificate__description">• <b>Ansible: your infrastructure as code</b><br>Alura | Issued in April 2022 - 12 Hours</p>
                             <p class="certificate__description">• <b>Terraform: Automate Cloud Infrastructure</b><br>Alura | Issued in April 2022 - 8 Hours</p>
                             <p class="certificate__description">• <b>Vagrant: Managing Virtual Machines</b><br>Alura | Issued in April 2022 - 12 Hours</p>
-                            <p class="certificate__description">• <b>Ansible: your infrastructure as code</b><br>Alura | Issued in April 2022 - 12 Hours</p>
                         </div>
 
                         <div class="certificate__content">
