--- a/index.html
+++ b/index.html
@@ -313,9 +313,10 @@
                             <h3 class="certificate__title"><b>Containers - Orchestration</b></h3>
                             <p class="certificate__description">• <b>DevOps Ninja: Docker, Kubernetes, and Rancher</b><br>Udemy | Issued in November 2021 - 19 Hours</p>
                             <p class="certificate__description">• <b>Kubernetes: Pods, Services and ConfigMaps</b><br>Alura | Issued in April 2022 - 8 Hours</p>
-                            <p class="certificate__description">• <b>Kubernetes: Deployments, Volumes e Escalabity</b><br>Alura | Issued in August de 2022 - 8 Horas</p>
+                            <p class="certificate__description">• <b>Kubernetes: Deployments, Volumes e Escalabity</b><br>Alura | Issued in August de 2022 - 8 Hours</p>
                             <p class="certificate__description">• <b>Docker: creating and managing containers</b><br>Alura | Issued in March 2022 - 10 Hours</p>
                             <p class="certificate__description">• <b>Docker Swarm: Container Orchestrator</b><br>Alura | Issued in June 2022 - 12 Hours</p>
+                            <p class="certificate__description">• <b>Containers Fundamentals</b><br>4Linux | Issued in August de 2022 - 20 Hours</p>
                         </div>
                                                
                         <div class="certificate__content">
