--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                             Instagram
                         </a>
 
+                        <a href="https://github.com/jonathanabrantes/" target="_blank" class="social__link">
+                            Github
+                        </a>
+
                     </div>
                 </section>
 
