--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 4: Using the command line to get help</b><br>Alura | Issued in March 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 5: Directories and Listing Files and managing files</b><br>Alura | Issued in March 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 6: Archiving Files on the Command Line</b><br>Alura | Issued in March 2022 - 8 Hours</p>
-                           <p class="certificate__description">• <b>Linux Certificação Linux LPI Essentials parte 10: Where Data is Stored</b><br>Alura | Issued in September 2022 - 4 Hours</p>
+                           <p class="certificate__description">• <b>Linux Certification LPI Essentials part 10: Where Data is Stored</b><br>Alura | Issued in September 2022 - 4 Hours</p>
                            <p class="certificate__description">• <b>Linux I: getting to know and using the terminal</b><br>Alura | Issued in March 2022 - 4 Hours</p>
                            <p class="certificate__description">• <b>Linux II: programs, processes and packages</b><br>Alura | Issued in March 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Linux Fundamentals</b><br>4Linux | Issued in August 2021 - 20 Hours</p>
