--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                             <p class="certificate__description">• <b>Kubernetes: Deployments, Volumes e Escalabity</b><br>Alura | Issued in August de 2022 - 8 Hours</p>
                             <p class="certificate__description">• <b>Docker: creating and managing containers</b><br>Alura | Issued in March 2022 - 10 Hours</p>
                             <p class="certificate__description">• <b>Docker Swarm: Container Orchestrator</b><br>Alura | Issued in June 2022 - 12 Hours</p>
+                            <p class="certificate__description">• <b>Amazon EKS: Managing Containerized Applications with Kubernetes</b><br>Alura | Issued in September 2022 - 6 Hours</p>
                             <p class="certificate__description">• <b>Containers Fundamentals</b><br>4Linux | Issued in August de 2022 - 20 Hours</p>
                         </div>
                                                
@@ -366,7 +367,10 @@
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 5: Directories and Listing Files and managing files</b><br>Alura | Issued in March 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 6: Archiving Files on the Command Line</b><br>Alura | Issued in March 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 7: Searching and Extracting Data from Files</b><br>Alura | Issued in September 2022 - 4 Hours</p>
+                           <p class="certificate__description">• <b>Linux Certification LPI Essentials part 8: Turning Commands into a Script</b><br>Alura | Issued in September 2022 - 5 Hours</p>
+                           <p class="certificate__description">• <b>Linux Certification LPI Essentials part 9: Understanding Computer Hardware</b><br>Alura | Issued in September 2022 - 4 Hours</p>
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 10: Where Data is Stored</b><br>Alura | Issued in September 2022 - 4 Hours</p>
+                           <p class="certificate__description">• <b>Linux Certification LPI Essentials part 11: Your Computer on the Network</b><br>Alura | Issued in September 2022 - 4 Hours</p>
                            <p class="certificate__description">• <b>Linux Certification LPI Essentials part 12: Security and File Permissions</b><br>Alura | Issued in September 2022 - 4 Hours</p>
                            <p class="certificate__description">• <b>Linux I: getting to know and using the terminal</b><br>Alura | Issued in March 2022 - 4 Hours</p>
                            <p class="certificate__description">• <b>Linux II: programs, processes and packages</b><br>Alura | Issued in March 2022 - 8 Hours</p>
