--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
                                     <p class="experience__description">•	Editing and creation of Debian images for Caixa's park;</p>
                                     <p class="experience__description">•	Edition of OCS modules for Caixa's park inventory;</p>
                                     <p class="experience__description">•	Development and implementation of projects in Caixa's environment.</p>
+                                    <p class="experience__description">•	Linux and OpenSource Solutions trainer.</p>
+                                    <p class="experience__description">•	Blog and Twitch content creator.</p>
                                 </div>
                             </div>
                     </div>
