Add courses and change job

--- a/index.html
+++ b/index.html
@@ -261,6 +261,9 @@
                                     <h3 class="experience__title">DevOps Analyst</h3>
                                     <span class="experience__company">2022-Current - <b>4Linux</b></span>
                                     <p class="experience__description">•	Docker/Docker Compose/Docker Swarm;</p>
+                                    <p class="experience__description">•	AWS and GCP Cloud management;</p>
+                                    <p class="experience__description">•	Kubernetes EKS;</p>
+                                    <p class="experience__description">•	CI/CD Jenkins;</p>
                                     <p class="experience__description">•	Linux System Administrator;</p>
                                     <p class="experience__description">•	Ansible/Ansible AWX;</p>
                                     <p class="experience__description">•	Editing and creation of Debian images for Caixa's park;</p>
@@ -284,7 +287,7 @@
                                     <span class="experience__company">2016 | 2021 - <b>Sicoob</b></span>
                                     <p class="experience__description">•	Infrastructure as code: Ansible;</p>
                                     <p class="experience__description">•	Administration of OVM (Oracle VM Manager); 
-                                    <p class="experience__description">•    Automation of virtual machines using Ansible;</p>
+                                    <p class="experience__description">•    	Automation of virtual machines using Ansible;</p>
                                     <p class="experience__description">•	Installation and administration of application servers (Jboss and Tomcat);</p>
                                     <p class="experience__description">•	Source code management tools (Git and Bitbucket);</p>
                                     <p class="experience__description">•	Jenkins continuous integration tool;</p>
@@ -331,6 +334,7 @@
                             <p class="certificate__description">• <b>Automation Specialist with Ansible</b><br>4Linux | Issued in August 2022 - 40 Hours</p>
                             <p class="certificate__description">• <b>Ansible: your infrastructure as code</b><br>Alura | Issued in April 2022 - 12 Hours</p>
                             <p class="certificate__description">• <b>Terraform: Automate Cloud Infrastructure</b><br>Alura | Issued in April 2022 - 8 Hours</p>
+                            <p class="certificate__description">• <b>Infrastructure as Code: Terraform and Kubernetes</b><br>Alura | Issued in January 2023 - 6 Hours</p>
                             <p class="certificate__description">• <b>Vagrant: Managing Virtual Machines</b><br>Alura | Issued in April 2022 - 12 Hours</p>
                         </div>
 
@@ -346,6 +350,8 @@
                        <div class="certificate__content">
                            <h3 class="certificate__title"><b>CI/CD</b></h3>
                            <p class="certificate__description">• <b>Git and Github: control and share your code</b><br>Alura | Issued in April 2022 - 6 Hours</p>
+                           <p class="certificate__description">• <b>Git and Github: repository, commit and versions</b><br>Alura | Issued in January 2023 - 8 Hours</p>
+                           <p class="certificate__description">• <b>Git and Github: branching strategies, Conflicts and Pull Requests</b><br>Alura | Issued in January 2023 - 8 Hours</p>
                            <p class="certificate__description">• <b>Gitlab CI and Docker: Continuous Delivery Pipeline</b><br>Alura | Issued in August 2022 - 8 Hours</p>
                            <p class="certificate__description">• <b>Jenkins and Docker: Continuous Delivery Pipeline</b> | Alura | Issued in April 2022 - 12 Hours</p>
                            <p class="certificate__description">• <b>Continuous Delivery: reliability and quality in software deployment</b><br>Alura | Issued in April 2022 - 8 Hours</p>
@@ -384,6 +390,7 @@
                             <h3 class="certificate__title"><b>Monitoring and Other</b></h3>
                             <p class="certificate__description">• <b>Service management: IT infrastructure roles and processes</b><br>Alura | Issued in April 2022 - 10 hours</p>
                             <p class="certificate__description">• <b>Grafana and Telegraf: Monitoring in real time</b><br>Alura | Issued in August 2022 - 10 hours</p>
+                            <p class="certificate__description">• <b>NGINX: Web server, Reverse Proxy and API Gateway</b><br>Alura | Issued in January 2023 - 10 hours</p>
                             <p class="certificate__description">• <b>PCI DSS Advanced Mode</b><br>1st Secure | Issued in February 2020 - 2 hours</p>
                         </div> 
                    </div>
