--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                        <div class="certificate__content">
                             <h3 class="certificate__title"><b>DevOps</b></h3>
                             <p class="certificate__description">• <b>DevOps Fundamentals</b><br>LinkeDin Learning | Issued in October 2021 - 2 Hours</p>
-                            <p class="certificate__description">• <b>DevOps Essentials</b><br>4Linux | Issued in September 2021 - 20 Hours</p>>
+                            <p class="certificate__description">• <b>DevOps Essentials</b><br>4Linux | Issued in September 2021 - 20 Hours</p>
                             <p class="certificate__description">• <b>DevOps Foundation</b><br>Estabilis Academy | Issued in September de 2022 - 2 Hours</p>
                         </div>
 
