--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     <p class="experience__description">•	CI/CD Jenkins;</p>
                                     <p class="experience__description">•	Linux System Administrator;</p>
                                     <p class="experience__description">•	Ansible/Ansible AWX;</p>
-                                    <p class="experience__description">•	Editing and creation of Debian images for Caixa's park;</p>
+                                    <p class="experience__description">•	Edition and creation of Debian images for Caixa's park;</p>
                                     <p class="experience__description">•	Edition of OCS modules for Caixa's park inventory;</p>
                                     <p class="experience__description">•	Development and implementation of projects in Caixa's environment;</p>
                                     <p class="experience__description">•	Linux and OpenSource Solutions trainer;</p>
