--- a/index.html
+++ b/index.html
@@ -322,11 +322,12 @@
                             <h3 class="certificate__title"><b>Containers - Orchestration</b></h3>
                             <p class="certificate__description">• <b>DevOps Ninja: Docker, Kubernetes, and Rancher</b><br>Udemy | Issued in November 2021 - 19 Hours</p>
                             <p class="certificate__description">• <b>Kubernetes: Pods, Services and ConfigMaps</b><br>Alura | Issued in April 2022 - 8 Hours</p>
-                            <p class="certificate__description">• <b>Kubernetes: Deployments, Volumes e Escalabity</b><br>Alura | Issued in August de 2022 - 8 Hours</p>
+                            <p class="certificate__description">• <b>Kubernetes: Deployments, Volumes e Escalabity</b><br>Alura | Issued in August 2022 - 8 Hours</p>
+                            <p class="certificate__description">• <b>Kubernetes for the Absolute Beginners - Hands-on</b><br>Udemy | Issued in February 2023 - 6 Hours</p>
                             <p class="certificate__description">• <b>Docker: creating and managing containers</b><br>Alura | Issued in March 2022 - 10 Hours</p>
                             <p class="certificate__description">• <b>Docker Swarm: Container Orchestrator</b><br>Alura | Issued in June 2022 - 12 Hours</p>
                             <p class="certificate__description">• <b>Amazon EKS: Managing Containerized Applications with Kubernetes</b><br>Alura | Issued in September 2022 - 6 Hours</p>
-                            <p class="certificate__description">• <b>Containers Fundamentals</b><br>4Linux | Issued in August de 2022 - 20 Hours</p>
+                            <p class="certificate__description">• <b>Containers Fundamentals</b><br>4Linux | Issued in August 2022 - 20 Hours</p>
                         </div>
                                                
                         <div class="certificate__content">
@@ -362,7 +363,8 @@
                             <h3 class="certificate__title"><b>DevOps</b></h3>
                             <p class="certificate__description">• <b>DevOps Fundamentals</b><br>LinkeDin Learning | Issued in October 2021 - 2 Hours</p>
                             <p class="certificate__description">• <b>DevOps Essentials</b><br>4Linux | Issued in September 2021 - 20 Hours</p>
-                            <p class="certificate__description">• <b>DevOps Foundation</b><br>Estabilis Academy | Issued in September de 2022 - 2 Hours</p>
+                            <p class="certificate__description">• <b>DevOps Foundation</b><br>Estabilis Academy | Issued in September 2022 - 2 Hours</p>
+                            <p class="certificate__description">• <b>Elite DevOps Journey</b><br>Fabrício Veronez | Issued in January 2023 - 10 Hours</p>
                         </div>
 
                         <div class="certificate__content">
