--- a/index.html
+++ b/index.html
@@ -113,24 +113,12 @@
 
                 <!-- Social -->
                 <section class="social section">
-                    <h2 class="section-title">SOCIAL</h2>
+                    <h2 class="section-title">Linktree</h2>
 
                     <div class="social__container bd-grid">
 
-                        <a href="https://api.whatsapp.com/send?phone=5561983611616" target="_blank" class="social__link">
-                            Whatsapp
-                        </a>
-
-                        <a href="https://www.linkedin.com/in/jonathan-abrantes-07614a48/" target="_blank" class="social__link">
-                            LinkedIn
-                        </a>
-
-                        <a href="https://www.instagram.com/iamabrantess/" target="_blank" class="social__link">
-                            Instagram
-                        </a>
-
-                        <a href="https://github.com/jonathanabrantes/" target="_blank" class="social__link">
-                            Github
+                        <a href="https://linktr.ee/iamabrantes" target="_blank" class="social__link">
+                            https://linktr.ee/iamabrantes
                         </a>
 
                     </div>
